test only IE to get things working

--- a/package.json
+++ b/package.json
@@ -5,13 +5,7 @@
     "testling": {
         "files": "./test.js",
         "browsers": {
-            "ie": "6..latest",
-            "chrome": "20..latest",
-            "firefox": "3.6..latest",
-            "opera": "10..latest",
-            "safari": "5.0.5..latest",
-            "ipad": "latest",
-            "android": "latest"
+            "iexplore": "6..latest"
         }
     }
 }
