--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
     "name": "browser-stacks",
     "version": "0.0.0",
     "private": true,
-    "testling": {
-        "files": "./test.js",
-        "browsers": {
-            "iexplore": "6..latest"
-        }
+    "dependencies": {
+        "debug": "0.7.4",
+        "in-order": "0.1.1",
+        "wd": "0.2.8"
     }
 }
